Fix overflow in execution report table; improve error page when no workflow execution report is available

--- a/silk-react-components/src/ExecutionReport/ExecutionReport.scss
+++ b/silk-react-components/src/ExecutionReport/ExecutionReport.scss
@@ -45,3 +45,7 @@
 .silk-report-list-item-icon-red {
   color: to_color($palette-red-800);
 }
+
+table.di-execution-report-table td {
+  overflow: scroll;
+}
